added another media query, desktop currently is not working on home screen.

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width:575.) {
+@media only screen and (max-width:599px) {
   html {
   background: url('./outdoorsLandscape.jpg') no-repeat 49% 50% fixed;
   }
