--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,79 @@
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role='list'],
+ol[role='list'] {
+  list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+   scroll-behavior: auto;
+  }
+  
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+
+
 @media only screen and (max-width:599px) {
   html {
   background: url('./outdoorsLandscape.jpg') no-repeat 49% 50% fixed;
@@ -46,7 +122,7 @@
     padding-top: 80px;
     position: fixed;
     top: 0;
-    height: 25vh;
+    height: 30vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -66,11 +142,17 @@
     margin-top: 0;
     border-radius: 5px;
   }
+  #parent-of-content {
+    display: flex;
+    justify-content: center;
+    width: auto;
+    height: auto;
+  }
 
   .content {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 90%;
   align-items: center;
   margin-top: 110px;
   }
@@ -79,23 +161,56 @@
     width: 75vw;
     border-radius: 50%;
   }
+  .social-links {
+    margin-top: 15px;
+    background-color: #DBD3AD;
+    /* height: 20%; */
+    width: 100%;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 64px;
+    padding: 5px;
+  }
+
+  .social-links a {
+    margin: -10px 0;
+    padding: 0;
+  }
+
+  .social-links i {
+    color: #AF4319;
+  }
+
+  .article-text {
+    width: 100%;
+  }
 
   .intro-text-container {
     background-color: #AF4319;
-    width: 90vw;
+    width: 100%;
     border-radius: 5px;
     margin-top: 15px;
+    padding: 10px;
+    text-align: center;
+    font-family: "Rock Salt";
+    line-height: 10px;
+    color: #DBD3AD;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
   .intro-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
   }
 
   .intro-text {
     font-family: 'Rock Salt';
     text-align: center;
-    line-height: 30px;
+    line-height: 35px;
     color: #DBD3AD;
     font-weight: 200;
   }
@@ -110,7 +225,16 @@
     line-height: 30px;
     color: #DBD3AD;
   }
+  .header-container h1 {
+    padding: 8px;
+  }
 
+  .text-container-welcome {
+    width: 90vw;
+    background-color: rgba(54,48,32,0.8);
+    margin-top: 15px;
+    padding: 10px;
+  }
   .text-container {
     width: 90vw;
     background-color: rgba(54,48,32,0.8);
@@ -217,45 +341,63 @@
     margin-top: 0;
     border-radius: 5px;
   }
+  #parent-of-content {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    /* height: auto; */
+  }
 
   .content {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 90vw;
   align-items: center;
   margin-top: 140px;
   }
+  .image-container {
+    width: 40%;
+  }
 
   #brady-photo {
-    height: 20vh;
+    width: 100%;
     border-radius: 50%;
   }
 
+  .social-links {
+    margin-top: 15px;
+    background-color: #DBD3AD;
+    /* height: 20%; */
+    width: 100%;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 64px;
+    padding: 5px;
+  }
+
+  .social-links a {
+    margin: -10px 0;
+    padding: 0;
+  }
+
+  .social-links i {
+    color: #AF4319;
+  }
+  .article-text {
+    margin-left: 15px;
+    width: 60%;
+  }
+
   .intro-container {
-    width: 90vw;
+    width: 100%;
     display: flex;
     justify-content: space-between;
   }
 
   .intro-text-container {
     background-color: #AF4319;
-    width: 90vw;
-    border-radius: 5px;
-    margin-top: 15px;
-    padding: 30px;
-  }
-  .intro-text {
-    font-family: 'Rock Salt';
-    text-align: left;
-    line-height: 30px;
-    color: #DBD3AD;
-    font-weight: 200;
-    font-size: 36px;
-  }
-
-  .header-container {
-    background-color: #AF4319;
-    width: 50vw;
+    width: 100%;
     border-radius: 5px;
     margin-top: 15px;
     padding: 10px;
@@ -267,7 +409,40 @@
     flex-direction: column;
     justify-content: center;
   }
+  .intro-text {
+    font-family: 'Rock Salt';
+    text-align: left;
+    padding: 8px;
+    line-height: 30px;
+    color: #DBD3AD;
+    font-weight: 200;
+    font-size: 3vw;
+  }
 
+  .header-container {
+    background-color: #AF4319;
+    width: 30vw;
+    border-radius: 5px;
+    margin-top: 15px;
+    padding: 10px;
+    text-align: center;
+    font-family: "Rock Salt";
+    line-height: 10px;
+    color: #DBD3AD;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .header-container h1 {
+    padding: 8px;
+  }
+
+  .text-container-welcome {
+    width: 100%;
+    background-color: rgba(54,48,32,0.8);
+    margin-top: 15px;
+    padding: 10px;
+  }
   .text-container {
     width: 90vw;
     background-color: rgba(54,48,32,0.8);
@@ -374,52 +549,56 @@
     border-radius: 5px;
   }
 
-  .parent-of-content {
+  #parent-of-content {
     display: flex;
     justify-content: center;
-    width: 100%;
+    width: auto;
     height: auto;
   }
 
   .content {
   display: flex;
   flex-direction: column;
-  width: 800px;
+  width: 1200px;
   align-items: center;
   margin-top: 140px;
-  background-color: lawngreen;
   }
 
   #brady-photo {
-    height: 20vh;
+    width: 100%;
     border-radius: 50%;
   }
 
-  .intro-container {
-    width: 90vw;
+  .social-links {
+    margin-top: 15px;
+    background-color: #DBD3AD;
+    /* height: 20%; */
+    width: 100%;
+    border-radius: 5px;
     display: flex;
     justify-content: space-between;
+    font-size: 64px;
+    padding: 5px;
+  }
+
+  .social-links a {
+    margin: -10px 0;
+    padding: 0;
+  }
+
+  .social-links i {
+    color: #AF4319;
+  }
+
+  .intro-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
   }
 
   .intro-text-container {
     background-color: #AF4319;
-    width: 90vw;
-    border-radius: 5px;
-    margin-top: 15px;
-    padding: 30px;
-  }
-  .intro-text {
-    font-family: 'Rock Salt';
-    text-align: left;
-    line-height: 30px;
-    color: #DBD3AD;
-    font-weight: 200;
-    font-size: 36px;
-  }
-
-  .header-container {
-    background-color: #AF4319;
-    width: 50vw;
+    width: 100%;
     border-radius: 5px;
     margin-top: 15px;
     padding: 10px;
@@ -431,12 +610,54 @@
     flex-direction: column;
     justify-content: center;
   }
+  .intro-text {
+    font-family: 'Rock Salt';
+    text-align: left;
+    padding: 20px;
+    line-height: 30px;
+    color: #DBD3AD;
+    font-weight: 200;
+    font-size:3em;
+  }
+
+  .header-container {
+    background-color: #AF4319;
+    /* width: 20vw; */
+    border-radius: 5px;
+    margin-top: 15px;
+    padding: 20px;
+    text-align: center;
+    font-family: "Rock Salt";
+    line-height: 10px;
+    color: #DBD3AD;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .header-container h1 {
+    padding: 8px;
+    font-size: 36px;
+  }
+
+  .article-text {
+    width: 60%;
+  }
+  .image-container {
+    width: 30%;
+  }
 
   .text-container {
     width: 90vw;
     background-color: rgba(54,48,32,0.8);
     margin-top: 15px;
     padding: 10px;
+  }
+  .text-container-welcome {
+    width: 100%;
+    background-color: rgba(54,48,32,0.8);
+    margin-top: 15px;
+    padding: 10px;
+    border-radius: 5px;
   }
 
   .text-container h2 {
